fix wrap

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -208,7 +208,7 @@
 
 @media screen and (max-width: 700px) {
   .name > span {
-    white-space: wrap !important;
+    white-space: normal !important;
   }
   .controls {
     top: auto;
